--- a/assets/app.scss
+++ b/assets/app.scss
@@ -1,7 +1,7 @@
 @import 'variables.scss';
 @import 'spinner.scss';
 
-body {
+html, body {
   font-family: "Roboto", Arial, sans-serif;
   font-size: 16px;
   font-weight: 300;
