More bright text colors

--- a/assets/variables.scss
+++ b/assets/variables.scss
@@ -5,7 +5,7 @@ $gray: #555;
 $primaryBackground: #161512;
 $secondaryBackground: #272520;
 
-$primaryText: #77726F;
+$primaryText: #8b8581;
 $secondaryText: #E0D6CF;
 
 $primary: #8aa953;
