--- a/assets/_variables.scss
+++ b/assets/_variables.scss
@@ -11,3 +11,9 @@ $secondaryText: #E0D6CF;
 $primary: #8aa953;
 $secondary: #1F6BA0;
 $link: darken(#8aa953, 10%);
+
+$blueBackground: #0e3352;
+$blueColor: #2d9aec;
+
+$redBackground: #59210d;
+$redColor: #d44a30;
